use plugin via scala_library deps

--- a/src/scala/datastax/app/BUILD
+++ b/src/scala/datastax/app/BUILD
@@ -3,6 +3,7 @@ scala_library(
     srcs = glob(["*.scala"]),
     visibility = ["//visibility:public"],
     deps = [
+        "//3rdparty/jvm/com/datastax/oss:java_driver_core",
         "//src/scala/datastax/domain",
     ],
 )
